# BrandOrbAI

./: .gitignore  README.md  SECURITY.md  frontend-linkedin-setup.html
backend/: .env.example  .gitignore  full_investor.json  investors.json  main.py  requirements.txt  run_market_analysis.py  setup_linkedin.py  test_enhanced_website_generator.py  test_linkedin_token.py  test_tsx_generation.py
backend/agents/: Financial_Assessment.py  README_competitor_discovery.md  README_social_media.md  bmc_agent.py  brand_discovery_agent.py  brand_identity_agent.py  brand_orchestrator.py  competitor_discovery_agent.py  ideation_agents.py  ideation_prompts.py  ideation_structs.py  identity_orchestrator.py  image_agent.py  investor_agent.py  legal_agent.py  linkedin_agent.py  marketAnalysis_competitors_Agents.py  opportunities_agent.py  prompts.py  social_media_agent.py  swot_agent.py  test_enhanced_website_generator.py  viability_agent.py  website_generator_agent.py
backend/agents/linkedin_agent-main/: README.md  data_finder.py  main.py  performance_test.py  prompts.py  pyproject.toml  trend_linkedin.py
backend/agents/linkedin_agent-main/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
backend/agents/linkedin_agent-main/linkedin_scraping_results/: linkedin_posts_20250812_233621.json  session_cc76b643-8603-4bb0-957e-538dab6dae20_data.json
backend/graphs/: multi_agent_graph.py
backend/output/: investor_analysis_output.json  (+2 more)
front/: .gitignore  README.md  package-lock.json  package.json
(+163 files in other folders)
