[project]
name = "tiktok-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=1.12.1",
    "groq>=0.31.0",
    "mlxtend>=0.23.4",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.0",
]
